--- a/src/components/RadForm/RADForm.css
+++ b/src/components/RadForm/RADForm.css
@@ -40,6 +40,15 @@
   width: 100%;
 }
 
+.fieldset legend {
+  font-weight: bold;
+  margin-bottom: 0.5em;
+  padding: 0.2em 0.5em;
+  border-radius: 4px;
+  background-color: #b2def1; 
+}
+
+
 .submit-button {
   background-color: #0054a4; /* NOAA Logo Dk. blue */
   color: white;
@@ -52,6 +61,17 @@
 
 .submit-button:hover {
   background-color: #003f76;
+}
+
+
+
+.input-with-tooltip {
+  display: flex;
+  align-items: center;
+}
+
+.input-with-tooltip .tooltip {
+  margin-left: 8px; /* Adjust the space between the input and the tooltip */
 }
 
 input[type="text"],
