--- a/src/NightWaveTheme.css
+++ b/src/NightWaveTheme.css
@@ -1,21 +1,17 @@
-/* NOAA Nightwave - Dark Theme */
-
-/* Base colors */
 :root {
-  --noaa-nightwave-background: #002d47; /* Dark navy blue */
-  --noaa-nightwave-text: #f4f4f4; /* Light grey for text */
-  --noaa-nightwave-accent: #0093d0; /* NOAA light blue for accents */
-  --noaa-nightwave-input-bg: #00467f; /* Darker blue for input backgrounds */
-  --noaa-nightwave-button: #0054a4; /* NOAA dark blue for buttons */
-  --noaa-nightwave-error: #af292e; /* NOAA red for error messages */
-  --noaa-nightwave-hover: #26a3d7; /* NOAA sky blue for hover effects */
+  --noaa-nightwave-background: #002d47;
+  --noaa-nightwave-text: #f4f4f4;
+  --noaa-nightwave-accent: #0093d0;
+  --noaa-nightwave-input-bg: #00467f;
+  --noaa-nightwave-button: #0054a4;
+  --noaa-nightwave-error: #af292e;
+  --noaa-nightwave-hover: #26a3d7;
 }
 
-/* Base font settings */
 body {
   font-family:
     Arial Narrow,
-    sans-serif; /* Substitute for Helvetica Neue */
+    sans-serif;
   color: var(--noaa-nightwave-text);
   background-color: var(--noaa-nightwave-background);
   line-height: 1.6;
@@ -30,7 +26,6 @@ form {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
-/* Label styles */
 label {
   display: block;
   margin-bottom: 5px;
@@ -40,7 +35,6 @@ label {
   letter-spacing: 0.6px;
 }
 
-/* Input, Select, and Textarea styles */
 input[type="text"],
 input[type="email"],
 input[type="tel"],
@@ -74,16 +68,14 @@ input[type="tel"]::placeholder,
 input[type="number"]::placeholder,
 select::placeholder,
 textarea::placeholder {
-  color: white; /* Or use a variable like var(--noaa-nightwave-text) if white is defined there */
-  opacity: 1; /* Optional: Adjust the opacity as needed */
+  color: white;
+  opacity: 1;
 }
 
-/* Radio button styles */
 input[type="radio"] {
   margin-right: 10px;
 }
 
-/* Button styles */
 button {
   background-color: var(--noaa-nightwave-button);
   color: white;
@@ -98,13 +90,11 @@ button:hover {
   background-color: var(--noaa-nightwave-hover);
 }
 
-/* Error message styles */
 .error-message {
   color: var(--noaa-nightwave-error);
   font-size: 14px;
 }
 
-/* Responsive design */
 @media (max-width: 768px) {
   form {
     width: 90%;
