--- a/src/styles/VibrantContrastTheme.css
+++ b/src/styles/VibrantContrastTheme.css
@@ -8,80 +8,129 @@
 }
 
 body {
-  font-family: "Times New Roman", serif;
-  color: var(--noaa-alt-text);
-  background-color: var(--noaa-alt-background);
+  font-family:
+    Arial Narrow,
+    sans-serif;
+  color: var(--noaa-text-color);
+  background-color: #f4f4f4;
   line-height: 1.6;
+  border-radius: 4px;
 }
 
-form {
-  max-width: 600px;
+/* Radfish input styles */
+.usa-label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+  color: var(--noaa-label-color);
+}
+
+.usa-textarea,
+.usa-range,
+.usa-input-group,
+.usa-combo-box__input,
+.usa-select,
+.usa-input {
+  min-width: 100%;
+  max-width: 1200px;
+  margin-bottom: 20px;
+  border-radius: 0.25rem !important;
+  border: solid var(--noaa-border-light) 2px !important;
+  transition: border-color 0.3s !important;
+  outline: none !important;
+}
+
+.usa-error-message {
+  color: var(--noaa-error-color);
+  font-size: 14px;
+}
+
+.usa-textarea:focus,
+.usa-range:focus,
+.usa-input-group:focus,
+.usa-combo-box__input:focus,
+.usa-select:focus,
+.usa-input:focus {
+  outline: solid var(--noaa-light-blue) 2px !important;
+}
+
+.usa-radio__label {
+  color: var(--noaa-text-color) !important;
+}
+
+.usa-radio__label::before {
+  color: var(--noaa-text-color) !important;
+  box-shadow: 0 0 0 1px var(--noaa-border-dark) !important;
+}
+
+.usa-radio__input:checked + .usa-radio__label::before {
+  background-color: var(--noaa-dark-blue) !important;
+  box-shadow: 0 0 0 2px var(--noaa-dark-blue) !important;
+}
+
+.usa-radio__input:checked:focus + .usa-radio__label::before {
+  outline: solid var(--noaa-light-blue) 2px;
+}
+
+.usa-button {
+  transition: background-color 0.3s;
+  background-color: var(--noaa-light-blue) !important;
+}
+
+.usa-button:hover {
+  background-color: var(--noaa-button-hover) !important;
+}
+
+.usa-button:focus {
+  outline: solid var(--noaa-light-blue) 2px !important;
+}
+
+.usa-menu-btn {
+  border-top-left-radius: 0.25rem !important;
+  border-bottom-left-radius: 0.25rem !important;
+  transition: background-color 0.3s;
+  background-color: var(--noaa-light-blue) !important;
+}
+
+.usa-menu-btn:hover {
+  background-color: var(--noaa-button-hover) !important;
+}
+
+.usa-menu-btn:focus {
+  outline: solid var(--noaa-light-blue) 2px !important;
+}
+
+/* HeaderNav styles */
+
+.usa-nav-container {
+  align-items: center !important;
+}
+
+.usa-header [role="search"] {
+  float: right;
+  max-width: calc(27ch) !important;
+  justify-content: flex-end !important;
+}
+
+.usa-navbar {
+  @media screen and (max-width: 1023px) {
+    min-height: 90px !important;
+  }
+}
+
+/* Minimum size for NOAA logo must be 72px (0.75 in) */
+.header-logo {
+  width: 72px;
+}
+
+/* RadfishForm styles */
+.radfish-form {
+  max-width: 800px;
   margin: 20px auto;
   padding: 20px;
   background: white;
   border-radius: 8px;
-  border: 1px solid var(--noaa-alt-dark);
-}
-
-label {
-  display: block;
-  margin-bottom: 5px;
-  font-weight: bold;
-  color: var(--noaa-alt-dark);
-}
-
-input[type="text"],
-input[type="email"],
-input[type="tel"],
-input[type="number"],
-select,
-textarea {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border: 2px solid var(--noaa-alt-accent);
-  border-radius: 4px;
-  box-sizing: border-box;
-  transition:
-    border-color 0.3s,
-    box-shadow 0.3s;
-}
-
-input[type="text"]:focus,
-input[type="email"]:focus,
-input[type="tel"]:focus,
-input[type="number"]:focus,
-select:focus,
-textarea:focus {
-  border-color: var(--noaa-alt-dark);
-  box-shadow: 0 0 8px var(--noaa-alt-accent);
-  outline: none;
-}
-
-input[type="radio"] {
-  margin-right: 10px;
-}
-
-button {
-  background-color: var(--noaa-alt-accent);
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 4px;
-  cursor: pointer;
-  transition:
-    background-color 0.3s,
-    transform 0.2s;
-}
-
-button:hover {
-  background-color: var(--noaa-alt-button-hover);
-  transform: scale(1.05);
-}
-
-.error-message {
-  color: var(--noaa-alt-error);
-  font-size: 14px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 @media (max-width: 768px) {
