--- a/src/styles/NightWaveTheme.css
+++ b/src/styles/NightWaveTheme.css
@@ -18,15 +18,7 @@ body {
   border-radius: 4px;
 }
 
-.radfish-form {
-  max-width: 800px;
-  margin: 20px auto;
-  padding: 20px;
-  background: white;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
+/* Radfish input styles */
 .usa-label {
   display: block;
   margin-bottom: 5px;
@@ -130,6 +122,16 @@ body {
 /* Minimum size for NOAA logo must be 72px (0.75 in) */
 .header-logo {
   width: 72px;
+}
+
+/* RadfishForm styles */
+.radfish-form {
+  max-width: 800px;
+  margin: 20px auto;
+  padding: 20px;
+  background: white;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 @media (max-width: 768px) {
