--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
+/* include trussworks css early on in app
+/*  this could eventually live within our component library, and bundled as a dependency
+*/
 @import "~@trussworks/react-uswds/lib/index.css";
+
+/* normalize css */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
