--- a/src/react-radfish/buttons/style.css
+++ b/src/react-radfish/buttons/style.css
@@ -8,7 +8,7 @@
 }
 
 .radfish-button:focus {
-  outline: solid var(--noaa-light-blue) 2px !important;
+  outline: solid var(--noaa-light-blue) 2px;
 }
 
 .radfish-menu-btn {
