--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 /* include trussworks css early on in app
 /*  this could eventually live within our component library, and bundled as a dependency
 */
-@import "~@trussworks/react-uswds/lib/index.css";
+@import "@trussworks/react-uswds/lib/index.css";
 
 /* normalize css */
 body {
