--- a/src/react-radfish/table/style.css
+++ b/src/react-radfish/table/style.css
@@ -19,7 +19,6 @@
   user-select: none;
 }
 
-.radfish-table-pagination-page-count {
-  margin-left: 2px;
-  margin-right: 2px;
+.radfish-table-body-cell {
+  background: transparent;
 }
