--- a/src/react-radfish/alerts/style.css
+++ b/src/react-radfish/alerts/style.css
@@ -1,8 +1,8 @@
 .toast-container {
-  position: fixed; /* Fixed positioning relative to the viewport */
-  top: 0; /* Align to the top of the viewport */
-  left: 50%; /* Center horizontally */
-  transform: translateX(-50%); /* Adjust for exact center alignment */
-  z-index: 1000; /* Ensure it's above other content */
-  width: 100%; /* Optional: Adjust width as necessary */
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1000;
+  width: 100%;
 }
