Rename to RADFish

--- a/packages/react-radfish/form/style.css
+++ b/packages/react-radfish/form/style.css
@@ -1,4 +1,4 @@
-/* RadfishForm styles */
+/* RADFishForm styles */
 .radfish-form {
   max-width: 800px;
   margin: 20px auto;
@@ -15,7 +15,7 @@
   }
 }
 
-/* Radfish Search Form styles */
+/* RADFish Search Form styles */
 
 .radfish-search {
   float: right;
