--- a/templates/react-javascript/src/styles/theme.css
+++ b/templates/react-javascript/src/styles/theme.css
@@ -23,7 +23,17 @@ body {
   border-radius: 4px;
 }
 
+.header-container {
+  background: var(--noaa-dark-blue);
+  color: white;
+}
+
 /* Minimum size for NOAA logo must be 72px (0.75 in) */
 .header-logo {
   width: 72px;
+}
+
+/* Mobile menu X button */
+.usa-nav__close {
+    color: black !important;
 }
