--- a/examples/simple-table/src/styles/theme.css
+++ b/examples/simple-table/src/styles/theme.css
@@ -28,11 +28,6 @@ body {
   width: 72px;
 }
 
-.radfish-table {
-  width: 100%;
-  background-color: lightgray;
-}
-
-.radfish-table > thead > tr > th {
-  border: 1px solid var(--noaa-border-dark);
+.status-column {
+  width: 220px;
 }
