--- a/packages/react-radfish/table/style.css
+++ b/packages/react-radfish/table/style.css
@@ -1,3 +1,23 @@
+.radfish-table {
+  width: 100%;
+  background-color: lightgray;
+}
+
+.radfish-table > thead > tr > th {
+  border: 1px solid var(--noaa-border-dark);
+}
+
+.radfish-table-header-cell {
+  display: flex;
+  justify-content: space-between;
+  cursor: pointer;
+  user-select: none;
+}
+
+.radfish-table-row {
+  cursor: pointer;
+}
+
 #radfish-table-pagination-goto {
   width: 65px;
   margin: 0px 5px;
@@ -6,15 +26,4 @@
 #radfish-table-pagination-select {
   width: 115px;
   margin: 0;
-}
-
-.radfish-table-row {
-  cursor: pointer;
-}
-
-.radfish-table-header-cell {
-  display: flex;
-  justify-content: space-between;
-  cursor: pointer;
-  user-select: none;
 }
