--- a/packages/react-radfish/table/style.css
+++ b/packages/react-radfish/table/style.css
@@ -27,3 +27,13 @@
   width: 115px;
   margin: 0;
 }
+
+.radfish-pagination-controls {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    align-items: center;
+}
+.radfish-pagination-controls > button {
+    margin: 0
+}
