--- a/examples/network-status/src/index.css
+++ b/examples/network-status/src/index.css
@@ -2,6 +2,7 @@
 /*  this could eventually live within our component library, and bundled as a dependency
 */
 @import "@trussworks/react-uswds/lib/index.css";
+@import "@trussworks/react-uswds/lib/uswds.css";
 
 /* normalize css */
 body {
