--- a/packages/react-radfish/table/style.css
+++ b/packages/react-radfish/table/style.css
@@ -29,11 +29,11 @@
 }
 
 .radfish-pagination-controls {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  align-items: center;
 }
 .radfish-pagination-controls > button {
-    margin: 0
+  margin: 0;
 }
