Update NavDropDownButton caret to white

--- a/templates/react-javascript/src/index.css
+++ b/templates/react-javascript/src/index.css
@@ -20,3 +20,9 @@ html,
 body {
   width: 100%;
 }
+
+@media (min-width: 64em) {
+  .usa-nav__primary button[aria-expanded=false] span:after {
+      background: white;
+  }
+}
