--- a/templates/react-javascript/themes/noaa-theme/styles/_colors.scss
+++ b/templates/react-javascript/themes/noaa-theme/styles/_colors.scss
@@ -9,7 +9,7 @@
  */
 
 // Primary colors
-$primary: purple;
+$primary: green;
 $secondary: #0093d0;
 $accent: #00467f;
 
@@ -25,7 +25,7 @@ $border-light: #ddd;
 
 // Background colors
 $background: #f4f4f4;
-$header-background: purple;
+$header-background: blue;
 
 // Warning/status colors
 $warning-light: #fff3cd;
