--- a/templates/react-javascript/src/styles/styles.css
+++ b/templates/react-javascript/src/styles/styles.css
@@ -8,7 +8,7 @@
 
 body {
   font-family: var(--radfish-font-family);
-  color: var(--noaa-text-color);
+  color: var(--radfish-text);
   background-color: var(--radfish-background);
   line-height: 1.6;
   border-radius: 4px;
