--- a/templates/react-javascript/src/index.css
+++ b/templates/react-javascript/src/index.css
@@ -28,6 +28,10 @@ body {
   width: 100%;
 }
 
+.header-logo {
+  width: 72px;
+}
+
 @media (min-width: 64em) {
   .usa-nav__primary button[aria-expanded=false] span:after {
       background: white;
