chore: move generated files

--- a/templates/react-javascript/src/index.css
+++ b/templates/react-javascript/src/index.css
@@ -7,7 +7,7 @@
  */
 
 /* Developer's page-level custom styles */
-@import "./styles/custom.css";
+@import "./styles/style.css";
 
 /* normalize css */
 body {
