--- a/templates/react-javascript/src/index.css
+++ b/templates/react-javascript/src/index.css
@@ -28,8 +28,22 @@ body {
   width: 100%;
 }
 
+.header-logo-link {
+  display: flex;
+  align-items: center;
+}
+
 .header-logo {
-  width: 72px;
+  height: 48px;
+  width: auto;
+}
+
+/* Keep menu button on the right on mobile/tablet */
+.usa-navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
 @media (min-width: 64em) {
